implemented JS functionality

--- a/index.html
+++ b/index.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/89063-200.png" type="image/png" />
     <link rel="stylesheet" href="styles.css" />
     <title>Harry Potter Quiz</title>
   </head>
   <body>
-    <div class="quiz-container">
+    <div class="quiz-container" id="quiz">
       <div class="quiz-header">
-        <h2 class="question">Name Ron Weasley's pet rat</h2>
+        <h2 id="question">Question text</h2>
         <ul>
           <li>
-            <input type="radio" class="answer" id="a" /><label
+            <input type="radio" name="answer" class="answer" id="a" /><label
               for="a"
               id="a_text"
-              >Scratchy</label
+              >Answer</label
             >
           </li>
           <li>
-            <input type="radio" class="answer" id="b" /><label
+            <input type="radio" name="answer" class="answer" id="b" /><label
               for="b"
               id="b_text"
-              >Scabbers</label
+              >Answer</label
             >
           </li>
           <li>
-            <input type="radio" class="answer" id="c" /><label
+            <input type="radio" name="answer" class="answer" id="c" /><label
               for="c"
               id="c_text"
-              >Itchy</label
+              >Answer</label
             >
           </li>
           <li>
-            <input type="radio" class="answer" id="d" /><label
+            <input type="radio" name="answer" class="answer" id="d" /><label
               for="d"
               id="d_text"
-              >Splinter</label
+              >Answer</label
             >
           </li>
         </ul>
